--- a/main.html
+++ b/main.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <div class="container">
+        <!-- Player Form -->
         <div id="player-form">
             <h1>Enter Player Names</h1>
-            <input type="text" id="player-1" placeholder="Player 1 Name">
-            <input type="text" id="player-2" placeholder="Player 2 Name">
+            <input type="text" id="player1" placeholder="Player 1 Name">
+            <input type="text" id="player2" placeholder="Player 2 Name">
             <button id="submit">Start Game</button>
         </div>
 
+        <!-- Game Board -->
         <div id="game-board" class="hidden">
             <h1>Tic Tac Toe</h1>
             <div class="message"></div>
