--- a/main.html
+++ b/main.html
@@ -8,32 +8,38 @@
 </head>
 <body>
     <div class="container">
-        <!-- Player Form -->
-        <div id="player-form">
-            <h1>Enter Player Names</h1>
-            <input type="text" id="player1" placeholder="Player 1 Name">
-            <input type="text" id="player2" placeholder="Player 2 Name">
+        <h1>Tic Tac Toe</h1>
+
+        <!-- Player input section -->
+        <div class="form-group">
+            <input type="text" id="player1" placeholder="Enter Player 1 Name">
+            <input type="text" id="player2" placeholder="Enter Player 2 Name">
             <button id="submit">Start Game</button>
         </div>
 
-        <!-- Game Board -->
-        <div id="game-board" class="hidden">
-            <h1>Tic Tac Toe</h1>
+        <!-- Game board -->
+        <div id="game" style="display: none;">
             <div class="message"></div>
             <div class="board">
-                <div class="cell" id="1"></div>
-                <div class="cell" id="2"></div>
-                <div class="cell" id="3"></div>
-                <div class="cell" id="4"></div>
-                <div class="cell" id="5"></div>
-                <div class="cell" id="6"></div>
-                <div class="cell" id="7"></div>
-                <div class="cell" id="8"></div>
-                <div class="cell" id="9"></div>
+                <div class="row">
+                    <div class="cell" id="1"></div>
+                    <div class="cell" id="2"></div>
+                    <div class="cell" id="3"></div>
+                </div>
+                <div class="row">
+                    <div class="cell" id="4"></div>
+                    <div class="cell" id="5"></div>
+                    <div class="cell" id="6"></div>
+                </div>
+                <div class="row">
+                    <div class="cell" id="7"></div>
+                    <div class="cell" id="8"></div>
+                    <div class="cell" id="9"></div>
+                </div>
             </div>
-            <button id="restart">Restart Game</button>
         </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
